--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,12 +21,12 @@
 
       <!-- Logo pour desktop (visible sur toutes les pages) -->
       <a href="/" class="mx-2 px-2 flex-1 hidden lg:block">
-        <img src="/src/assets/logo.svg" alt="CP Academy" class="w-30 h-30">
+        <img src="/assets/logo.svg" alt="CP Academy" class="w-30 h-30">
       </a>
 
       <!-- Logo pour mobile (visible sur toutes les pages sauf home) -->
       <a href="/" class="mx-2 px-2 flex-1 lg:hidden" id="mobile-logo">
-        <img src="/src/assets/logo.svg" alt="CP Academy" class="w-16 h-16">
+        <img src="/assets/logo.svg" alt="CP Academy" class="w-16 h-16">
       </a>
 
       <div class="hidden flex-none lg:block">
