--- a/src/components/formation/Article.astro
+++ b/src/components/formation/Article.astro
@@ -30,8 +30,8 @@ const formationsArray = formationKey
         <li class="text-white mb-1 mt-1 2xl:text-xl">{item}</li>
       ))}
     </ul>
-    <hr class="h-1 my-4 text-gray-500"/>
-    <h3 class="text-white text-xl 2xl:text-3xl font-semibold 2xl:mt-16">{formation.secondPart.title}</h3>
+    <hr class="h-1 my-4 text-gray-500 2xl:my-10"/>
+    <h3 class="text-white text-xl 2xl:text-3xl font-semibold">{formation.secondPart.title}</h3>
     {formation.secondPart.description.map((desc) => (
       <p class="text-white mb-2 mt-4 2xl:text-xl">{desc}</p>
     ))}
