--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -61,8 +61,11 @@
         </svg>
     </div>
     
-    <div class="flex flex-col items-center justify-center md:items-start md:w-1/2 md:pl-24 2xl:pl-40 text-center z-10">
-        <h1 class="text-lg text-start leading-6 md:leading-10 md:text-4xl font-bold"><span class="gradient-text">Développez</span> vos <span class="gradient-text">compétences, investissez</span> en vous même !</h1>
+    <div class="flex flex-col items-center justify-center md:items-start md:w-1/2 2xl:w-[60%] md:pl-24 2xl:pl-40 text-center z-10">
+        <h1 class="text-lg text-start leading-6 md:leading-10 2xl:leading-12 md:text-4xl 2xl:text-6xl font-bold">
+            <span class="gradient-text">Développez</span> vos <span class="gradient-text">compétences</span><br class="hidden 2xl:block" />
+            <span class="gradient-text">investissez</span> en vous même !
+        </h1>
         <p class="text-start pt-4 text-white text-xs md:text-base md:pt-4"><span class="font-bold">Transformez votre avenir professionnel</span> grâce à des formations éligibles au Compte Personnel de Formation (CPF). <span class="font-bold">Profitez d'un financement à 100%</span> et accédez à des programmes conçus pour booster votre carrière !</p>
         <button onclick="window.location.href='/#contact'" class="btn rounded-tr-xl rounded-bl-xl bg-none border-white text-white mt-8 hover:bg-white hover:text-black mb-10">Prenez rendez-vous</button>
     </div>
