--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>CP Academy</title>
 	</head>
-	<body>
+	<body class="overflow-x-hidden">
 		<Navbar />
 		<slot />
 		<Footer />
