--- a/src/components/formation/FormationsCards.astro
+++ b/src/components/formation/FormationsCards.astro
@@ -14,9 +14,9 @@ const backgroundImages: Record<string, string> = {
 };
 ---
 
-<div class="flex flex-col md:flex-row gap-6 mx-5 md:mx-32 2xl:mx-72 justify-center md:justify-start">
+<div class="flex flex-col md:flex-row gap-6 px-5 md:px-32 2xl:px-72 justify-center md:justify-start">
   {otherFormationKeys.map(key => (
-      <section class="formation-card flex flex-col items-center justify-between mx-2 md:mx-0 border border-white rounded-bl-3xl transition-all duration-300 md:w-1/3">
+      <section class="formation-card flex flex-col items-center justify-between px-2 md:px-0 border border-white rounded-bl-3xl transition-all duration-300 md:w-1/3">
         <header class="flex flex-col gap-1 justify-center 2xl:h-36 bg-cover bg-center p-5 w-full" style={`background-image: url('${backgroundImages[key]}')`}>
           <h3 class="text-white font-bestley font-semibold text-sm">{formations[key].surTitle}</h3>
           <h3 class="text-white font-bestley font-semibold text-sm">{formations[key].subTitle}</h3>
