--- a/src/components/formation/Hero.astro
+++ b/src/components/formation/Hero.astro
@@ -24,7 +24,7 @@ const backgroundImage = formationKey && formationKey in backgroundImages
   : '/assets/hero-formation.png';
 ---
 
-<div class="mt-32 md:mt-40 2xl:mt-46 mb-10 bg-hero w-full h-72 2xl:h-96 bg-cover bg-center flex justify-center md:justify-start md:pl-24 2xl:pl-64" style={`background-image: url('${backgroundImage}')`}>
+<div class="mt-32 md:mt-40 2xl:mt-46 mb-10 -mx-4 md:mx-0  h-72 2xl:h-96 bg-cover bg-center flex justify-center md:justify-start md:pl-24 2xl:pl-64" style={`background-image: url('${backgroundImage}')`}>
   {formationsArray.map((formation, index) => (
     <header class="flex flex-col justify-center px-10 ">
       <h3 class="text-white text-start md:text-3xl font-semibold text-shadow">
