--- a/src/components/formation/Article.astro
+++ b/src/components/formation/Article.astro
@@ -41,7 +41,7 @@ const formationsArray = formationKey
       <div class="color-spot blue-spot hidden md:block" data-color="blue"></div>
       <div class="color-spot pink-spot-left hidden md:block" data-color="pink-left"></div>
       <div class="color-spot yellow-spot hidden md:block" data-color="yellow"></div>
-      <div class="color-spot pink-spot-right" data-color="pink-right"></div>
+      <div class="color-spot pink-spot-right hidden md:block" data-color="pink-right"></div>
       <img src={formation.thumbnail} alt={formation.title} class="w-full h-full object-contain md:h-fit relative z-10 pointer-events-none" />
     </section>
   </article>
