ajout du regelement interieur

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,6 +23,7 @@
     <section class="flex justify-center items-center gap-4 pt-4">
         <a href="/mentions-legales" class="text-white text-sm font-light hover:text-pink-500">Mentions légales</a>
         <a href="/politique-de-confidentialite" class="text-white text-sm font-light hover:text-yellow-500">Politique de confidentialité</a>
+        <a href="/reglement-interieur" class="text-white text-sm font-light hover:text-green-500">Règlement intérieur</a>
     </section>
     <p class="text-white text-sm font-light pt-1">© <span id="currentYear"></span> CP Academy - Tous droits réservés.</p>
 </footer>
