--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,14 +2,21 @@
   <input id="mon-drawer" type="checkbox" class="top-drawer-toggle hidden" />
   <div class="flex flex-col">
     <!-- Navbar -->
-    <div class="navbar bg-transparent w-full flex flex-row-reverse md:flex-row md:px-14 pt-8 pr-8">
+    <div
+      class="navbar bg-transparent w-full flex flex-row-reverse md:flex-row md:px-14 pt-8 pr-8"
+    >
       <div class="flex-none lg:hidden">
-        <label for="mon-drawer" aria-label="open sidebar" class="btn btn-square btn-ghost gradient-border">
+        <label
+          for="mon-drawer"
+          aria-label="open sidebar"
+          class="btn btn-square btn-ghost gradient-border"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
-            class="inline-block h-6 w-6 stroke-white">
+            class="inline-block h-6 w-6 stroke-white"
+          >
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
@@ -21,12 +28,12 @@
 
       <!-- Logo pour desktop (visible sur toutes les pages) -->
       <a href="/" class="mx-2 px-2 flex-1 hidden lg:block">
-        <img src="/assets/logo.svg" alt="CP Academy" class="w-30 h-30">
+        <img src="/assets/logo.svg" alt="CP Academy" class="w-30 h-30" />
       </a>
 
       <!-- Logo pour mobile (visible sur toutes les pages sauf home) -->
       <a href="/" class="mx-2 px-2 flex-1 lg:hidden" id="mobile-logo">
-        <img src="/assets/logo.svg" alt="CP Academy" class="w-16 h-16">
+        <img src="/assets/logo.svg" alt="CP Academy" class="w-16 h-16" />
       </a>
 
       <div class="hidden flex-none lg:block">
@@ -35,11 +42,43 @@
           <li><a href="/">Accueil</a></li>
           <li class="dropdown-menu hover:bg-black/20">
             <details>
-              <summary>Nos formations</summary>
-              <ul class="rounded-t-none px-2 pb-2 pt-0 bg-black w-full rounded-b-xl">
-                <li><a href="/browlift">Browlift & Rehaussement de cils</a></li>
-                <li><a href="/botox">Soin capillaire au Botox</a></li>
-                <li><a href="/prothesiste">Prothésiste ongulaire</a></li>
+              <summary class="font-semibold text-white">Nos formations</summary>
+              <ul
+                class="rounded-t-none bg-black/90 w-80 rounded-b-xl space-y-3 shadow-lg"
+              >
+                <li class="dropdown-submenu">
+                  <details>
+                    <summary class="text-sm font-semibold text-white/90"
+                      >Création / Développement d'entreprise &amp; Techniques
+                      professionnelles</summary
+                    >
+                    <ul
+                      class="menu menu-compact gap-3 pl-4 text-xs text-white/90"
+                    >
+                      <li>
+                        <a class="py-2 text-sm" href="/browlift"
+                          >Browlift &amp; Rehaussement de cils</a
+                        >
+                      </li>
+                      <li>
+                        <a class="py-2 text-sm" href="/botox"
+                          >Soin capillaire au Botox</a
+                        >
+                      </li>
+                      <li>
+                        <a class="py-2 text-sm" href="/prothesiste"
+                          >Prothésiste ongulaire</a
+                        >
+                      </li>
+                    </ul>
+                  </details>
+                </li>
+                <li class="pl-3 text-gray-300/70 cursor-not-allowed">
+                  Relation et expérience client (a venir)
+                </li>
+                <li class="pl-3 text-gray-300/70 cursor-not-allowed">
+                  Suivi et Satisfaction client (a venir)
+                </li>
               </ul>
             </details>
           </li>
@@ -51,11 +90,25 @@
     <!-- Menu déroulant du haut -->
     <div class="top-drawer">
       <div class="top-drawer-overlay"></div>
-      <div class="top-drawer-content bg-white bg-cover bg-center w-full h-screen p-8">
+      <div
+        class="top-drawer-content bg-white bg-cover bg-center w-full h-screen p-8"
+      >
         <header class="flex flex-row-reverse">
-          <label for="mon-drawer" class="btn btn-square btn-ghost gradient-border-white gradient-border group">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 stroke-black transition-colors group-hover:stroke-white" fill="none" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          <label
+            for="mon-drawer"
+            class="btn btn-square btn-ghost gradient-border-white gradient-border group"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 stroke-black transition-colors group-hover:stroke-white"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M6 18L18 6M6 6l12 12"></path>
             </svg>
           </label>
         </header>
@@ -64,11 +117,33 @@
             <li><a href="/">Accueil</a></li>
             <li class="dropdown-mobile">
               <details>
-                <summary>Nos formations</summary>
-                <ul class="menu menu-vertical gap-4 pl-4 text-xl">
-                  <li class="mt-4"><a href="/browlift">Browlift & Rehaussement de cils</a></li>
-                  <li><a href="/botox">Soin capillaire au Botox</a></li>
-                  <li><a href="/prothesiste">Prothésiste ongulaire</a></li>
+                <summary class="text-3xl font-semibold">Nos formations</summary>
+                <ul class="menu menu-vertical gap-6 pl-6 text-2xl">
+                  <li class="dropdown-submenu">
+                    <details>
+                      <summary class="text-2xl font-semibold"
+                        >Création / Développement d'entreprise &amp; Techniques
+                        professionnelles</summary
+                      >
+                      <ul class="menu menu-vertical gap-4 pl-4 text-xl">
+                        <li class="mt-4">
+                          <a class="py-2" href="/browlift"
+                            >Browlift &amp; Rehaussement de cils</a
+                          >
+                        </li>
+                        <li>
+                          <a class="py-2" href="/botox"
+                            >Soin capillaire au Botox</a
+                          >
+                        </li>
+                        <li>
+                          <a class="py-2" href="/prothesiste"
+                            >Prothésiste ongulaire</a
+                          >
+                        </li>
+                      </ul>
+                    </details>
+                  </li>
                 </ul>
               </details>
             </li>
@@ -84,275 +159,278 @@
 
 <script>
   // Vérifier si on est sur la page d'accueil
-  const isHomePage = window.location.pathname === '/' || window.location.pathname === '/index.html';
-  const mobileLogo = document.getElementById('mobile-logo');
+  const isHomePage =
+    window.location.pathname === "/" ||
+    window.location.pathname === "/index.html";
+  const mobileLogo = document.getElementById("mobile-logo");
 
   // Cacher le logo mobile si on est sur la page d'accueil
   if (isHomePage && mobileLogo) {
-    mobileLogo.style.display = 'none';
+    mobileLogo.style.display = "none";
   }
 </script>
 
 <style>
-
-li > a:hover {
+  li > a:hover {
     background: linear-gradient(
-          90deg,
-          rgba(65, 88, 208, 1) 0%,
-          rgba(199, 81, 192, 1) 50%,
-          rgba(255, 203, 112, 1) 100%
-      );
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-}
-.gradient-border {
-position: relative;
-z-index: 0;
-background: transparent;
-}
-
-.gradient-border::before {
-content: "";
-position: absolute;
-z-index: -1;
-inset: -2px;
-border-top-right-radius: 0.5rem;
-border-bottom-left-radius: 0.5rem;
-background: linear-gradient(45deg, #4158D0, #C751C0, #FFCB70);
-padding: 2px;
-}
-
-.gradient-border::after {
-content: "";
-position: absolute;
-z-index: -1;
-inset: 0;
-border-top-right-radius: 0.4rem;
-border-bottom-left-radius: 0.4rem;
-background-color: var(--background-color, #20201F);
-transition: background-color 0.3s ease;
-}
-
-.gradient-border-white::after {
-content: "";
-position: absolute;
-z-index: -1;
-inset: 0;
-border-top-right-radius: 0.4rem;
-border-bottom-left-radius: 0.4rem;
-background-color: var(--background-color, white);
-transition: background-color 0.3s ease;
-}
-
-.gradient-border:hover::after {
-background-color: transparent;
-}
-
-/* Styles pour le menu plein écran */
-.top-drawer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  overflow: hidden;
-  transition: height 0.5s ease-in-out;
-  z-index: 50;
-}
-
-.top-drawer-toggle:checked ~ div .top-drawer {
-  height: 100vh;
-}
-
-.top-drawer-content {
-  opacity: 0;
-  transform: translateY(-50px);
-  transition: opacity 0.5s, transform 0.5s;
-  transition-delay: 0.1s;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.top-drawer-toggle:checked ~ div .top-drawer .top-drawer-content {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.top-drawer-overlay {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5);
-opacity: 0;
-pointer-events: none;
-transition: opacity 0.3s;
-z-index: -1;
-}
-
-.top-drawer-toggle:checked ~ div .top-drawer-overlay {
-opacity: 1;
-pointer-events: auto;
-}
-
-.dropdown-menu details[open] {
-position: relative;
-background-color: transparent;
-border-radius: 0.5rem;
-}
-
-.dropdown-menu details[open]::before {
-content: "";
-position: absolute;
-inset: -1px;
-border-radius: 0.5rem;
-background: linear-gradient(
-  90deg,
-  rgba(65, 88, 208, 1) 0%,
-  rgba(199, 81, 192, 1) 50%,
-  rgba(255, 203, 112, 1) 100%
-);
-z-index: -1;
-}
-
-.dropdown-menu details[open]::after {
-content: "";
-position: absolute;
-inset: 1px;
-border-radius: 0.4rem;
-background-color: #20201F;
-z-index: -1;
-}
-
-.dropdown-menu details[open] summary {
-background-color: transparent;
-}
-
-.dropdown-menu details[open] ul {
-background-color: #121212;
-margin-top: 0.5rem;
-border-radius: 0.5rem;
-padding: 0.5rem;
-}
-
-.dropdown-menu details[open] summary:hover,
-.dropdown-menu details[open] ul li a:hover {
-background: linear-gradient(
-  90deg,
-  rgba(65, 88, 208, 1) 0%,
-  rgba(199, 81, 192, 1) 50%,
-  rgba(255, 203, 112, 1) 100%
-);
--webkit-background-clip: text;
-background-clip: text;
-color: transparent;
-background-color: transparent;
-}
-
-.dropdown-menu details[open] ul li a:hover {
-background-color: transparent;
-}
-
-.dropdown-menu summary:hover,
-.dropdown-menu ul li a:hover {
-background: linear-gradient(
-  90deg,
-  rgba(65, 88, 208, 1) 0%,
-  rgba(199, 81, 192, 1) 50%,
-  rgba(255, 203, 112, 1) 100%
-);
--webkit-background-clip: text;
-background-clip: text;
-color: transparent;
-background-color: transparent;
-}
-
-.dropdown-menu ul li a:hover {
-background-color: transparent;
-}
-
-/* Styles pour le dropdown mobile */
-.dropdown-mobile details {
-  color: black;
-  width: 100%;
-}
-
-.dropdown-mobile summary {
-  cursor: pointer;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  gap: 0.7rem;
-  width: 100%;
-}
-
-.dropdown-mobile details[open] {
-  position: static;
-}
-
-.dropdown-mobile details[open] ul {
-  animation: slideDown 0.2s ease-out;
-  position: static;
-  width: 100%;
-}
-
-/* Container principal du menu */
-.flex-col.items-center.justify-center.h-full {
-  display: flex;
-  width: 100%;
-  height: 80%;
-  justify-content: center;
-  align-items: center;
-  overflow: auto;
-}
-
-.menu.menu-vertical {
-  width: 100%;
-  max-width: 250px;
-  margin: 0 auto;
-}
-
-/* Reset des alignements pour conserver les textes à gauche */
-.menu.menu-vertical li a {
-  justify-content: flex-start;
-  padding-left: 16px;
-}
-
-/* Style pour le dropdown mobile */
-.dropdown-mobile summary {
-  justify-content: flex-start;
-  text-align: left;
-  padding-left: 16px;
-}
-
-/* Conserver l'alignement à gauche dans le dropdown */
-.dropdown-mobile details[open] ul {
-  animation: slideDown 0.2s ease-out;
-  width: 100%;
-  padding-left: 16px;
-}
-
-.dropdown-mobile details[open] ul li {
-  width: 100%;
-}
-
-.dropdown-mobile details[open] ul li a {
-  justify-content: flex-start;
-  width: 100%;
-  text-align: left;
-}
-
-@keyframes slideDown {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
+      90deg,
+      rgba(65, 88, 208, 1) 0%,
+      rgba(199, 81, 192, 1) 50%,
+      rgba(255, 203, 112, 1) 100%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
   }
-  to {
+  .gradient-border {
+    position: relative;
+    z-index: 0;
+    background: transparent;
+  }
+
+  .gradient-border::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: -2px;
+    border-top-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    background: linear-gradient(45deg, #4158d0, #c751c0, #ffcb70);
+    padding: 2px;
+  }
+
+  .gradient-border::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    border-top-right-radius: 0.4rem;
+    border-bottom-left-radius: 0.4rem;
+    background-color: var(--background-color, #20201f);
+    transition: background-color 0.3s ease;
+  }
+
+  .gradient-border-white::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    border-top-right-radius: 0.4rem;
+    border-bottom-left-radius: 0.4rem;
+    background-color: var(--background-color, white);
+    transition: background-color 0.3s ease;
+  }
+
+  .gradient-border:hover::after {
+    background-color: transparent;
+  }
+
+  /* Styles pour le menu plein écran */
+  .top-drawer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.5s ease-in-out;
+    z-index: 50;
+  }
+
+  .top-drawer-toggle:checked ~ div .top-drawer {
+    height: 100vh;
+  }
+
+  .top-drawer-content {
+    opacity: 0;
+    transform: translateY(-50px);
+    transition:
+      opacity 0.5s,
+      transform 0.5s;
+    transition-delay: 0.1s;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .top-drawer-toggle:checked ~ div .top-drawer .top-drawer-content {
     opacity: 1;
     transform: translateY(0);
   }
-}
+
+  .top-drawer-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    z-index: -1;
+  }
+
+  .top-drawer-toggle:checked ~ div .top-drawer-overlay {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .dropdown-menu details[open] {
+    position: relative;
+    background-color: transparent;
+    border-radius: 0.5rem;
+  }
+
+  .dropdown-menu details[open]::before {
+    content: "";
+    position: absolute;
+    inset: -1px;
+    border-radius: 0.5rem;
+    background: linear-gradient(
+      90deg,
+      rgba(65, 88, 208, 1) 0%,
+      rgba(199, 81, 192, 1) 50%,
+      rgba(255, 203, 112, 1) 100%
+    );
+    z-index: -1;
+  }
+
+  .dropdown-menu details[open]::after {
+    content: "";
+    position: absolute;
+    inset: 1px;
+    border-radius: 0.4rem;
+    background-color: #20201f;
+    z-index: -1;
+  }
+
+  .dropdown-menu details[open] summary {
+    background-color: transparent;
+  }
+
+  .dropdown-menu details[open] ul {
+    background-color: #121212;
+    margin-top: 0.5rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+  }
+
+  .dropdown-menu details[open] summary:hover,
+  .dropdown-menu details[open] ul li a:hover {
+    background: linear-gradient(
+      90deg,
+      rgba(65, 88, 208, 1) 0%,
+      rgba(199, 81, 192, 1) 50%,
+      rgba(255, 203, 112, 1) 100%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-color: transparent;
+  }
+
+  .dropdown-menu details[open] ul li a:hover {
+    background-color: transparent;
+  }
+
+  .dropdown-menu summary:hover,
+  .dropdown-menu ul li a:hover {
+    background: linear-gradient(
+      90deg,
+      rgba(65, 88, 208, 1) 0%,
+      rgba(199, 81, 192, 1) 50%,
+      rgba(255, 203, 112, 1) 100%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-color: transparent;
+  }
+
+  .dropdown-menu ul li a:hover {
+    background-color: transparent;
+  }
+
+  /* Styles pour le dropdown mobile */
+  .dropdown-mobile details {
+    color: black;
+    width: 100%;
+  }
+
+  .dropdown-mobile summary {
+    cursor: pointer;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    width: 100%;
+  }
+
+  .dropdown-mobile details[open] {
+    position: static;
+  }
+
+  .dropdown-mobile details[open] ul {
+    animation: slideDown 0.2s ease-out;
+    position: static;
+    width: 100%;
+  }
+
+  /* Container principal du menu */
+  .flex-col.items-center.justify-center.h-full {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+  }
+
+  .menu.menu-vertical {
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+  }
+
+  /* Reset des alignements pour conserver les textes à gauche */
+  .menu.menu-vertical li a {
+    justify-content: flex-start;
+    padding-left: 16px;
+  }
+
+  /* Style pour le dropdown mobile */
+  .dropdown-mobile summary {
+    justify-content: flex-start;
+    text-align: left;
+    padding-left: 16px;
+  }
+
+  /* Conserver l'alignement à gauche dans le dropdown */
+  .dropdown-mobile details[open] ul {
+    animation: slideDown 0.2s ease-out;
+    width: 100%;
+    padding-left: 16px;
+  }
+
+  .dropdown-mobile details[open] ul li {
+    width: 100%;
+  }
+
+  .dropdown-mobile details[open] ul li a {
+    justify-content: flex-start;
+    width: 100%;
+    text-align: left;
+  }
+
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 </style>
