Add relation client training materials and update navigation

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -73,8 +73,10 @@
                     </ul>
                   </details>
                 </li>
-                <li class="pl-3 text-gray-300/70 cursor-not-allowed">
-                  Relation et expérience client (à venir)
+                <li>
+                  <a class="py-2 text-sm" href="/relation-client"
+                    >Relation et expérience client</a
+                  >
                 </li>
                 <li class="pl-3 text-gray-300/70 cursor-not-allowed">
                   Suivi et Satisfaction client (à venir)
@@ -144,8 +146,10 @@
                       </ul>
                     </details>
                   </li>
-                  <li class="pl-3 text-sm text-gray-300/90 cursor-not-allowed">
-                    Relation et expérience client (à venir)
+                  <li>
+                    <a class="py-2 text-sm" href="/relation-client"
+                      >Relation et expérience client</a
+                    >
                   </li>
                   <li class="pl-3 text-sm text-gray-300/90 cursor-not-allowed">
                     Suivi et Satisfaction client (à venir)
