--- a/src/components/formation/FormationsCards.astro
+++ b/src/components/formation/FormationsCards.astro
@@ -11,6 +11,7 @@ const backgroundImages: Record<string, string> = {
   browlift: '/assets/browlift.png',
   botox: '/assets/botox.png',
   prothesiste: '/assets/ongle.png',
+  'relation-client': '/assets/relation-client.jpg',
 };
 ---
 
