--- a/src/components/home/Carousel.astro
+++ b/src/components/home/Carousel.astro
@@ -12,6 +12,7 @@ import 'swiper/css/pagination';
       <div class="swiper-slide bg-coiffure"></div>
       <div class="swiper-slide bg-esthetique"></div>
       <div class="swiper-slide bg-prothesiste"></div>
+      <div class="swiper-slide bg-relation-client"></div>
     </div>
   </div>
 
@@ -43,6 +44,14 @@ import 'swiper/css/pagination';
           <h3 class="font-bestley font-semibold pb-3">Création / Développement d'entreprise & Techniques professionnelles</h3>
           <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Découvrez les techniques de prothésiste ongulaire et offrez des soins de qualité à vos clients. Apprenez à maîtriser les techniques de prothésiste ongulaire et à offrir des résultats professionnels et esthétiques.</p>
           <a href="/prothesiste" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="content px-10 pt-14">
+          <h3 class="text-white text-center text-xl font-bold font-bestley pt-10 pb-2 md:text-2xl 2xl:text-3xl 2xl:pb-10">Relation et expérience client</h3>
+          <h3 class="font-bestley font-semibold pb-3">Préparation au bloc RNCP36331BC03 (Bac Pro Esthétique, Cosmétique et Parfumerie)</h3>
+          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Développez vos compétences en relation client dans l'esthétique. Formation intensive alliant théorie et pratique avec jeux de rôle et mises en situation réelles pour fidéliser votre clientèle.</p>
+          <a href="/relation-client" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
         </div>
       </div>
     </div>
@@ -157,6 +166,12 @@ import 'swiper/css/pagination';
 
   .bg-prothesiste {
     background-image: url('/assets/carrousel/slider-3.png');
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-relation-client {
+    background-image: url('/assets/carrousel/slider-4.png');
     background-size: cover;
     background-position: center;
   }
