Add pointer-events: none to dropdown menu styles in Navbar component

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -304,6 +304,7 @@
       rgba(255, 203, 112, 1) 100%
     );
     z-index: -1;
+    pointer-events: none;
   }
 
   .dropdown-menu details[open]::after {
@@ -313,6 +314,7 @@
     border-radius: 0.4rem;
     background-color: #20201f;
     z-index: -1;
+    pointer-events: none;
   }
 
   .dropdown-menu details[open] summary {
