--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -290,6 +290,7 @@
     position: relative;
     background-color: transparent;
     border-radius: 0.5rem;
+    isolation: isolate;
   }
 
   .dropdown-menu details[open]::before {
@@ -304,7 +305,7 @@
       rgba(255, 203, 112, 1) 100%
     );
     z-index: -1;
-    pointer-events: none;
+    pointer-events: none !important;
   }
 
   .dropdown-menu details[open]::after {
@@ -314,11 +315,13 @@
     border-radius: 0.4rem;
     background-color: #20201f;
     z-index: -1;
-    pointer-events: none;
+    pointer-events: none !important;
   }
 
   .dropdown-menu details[open] summary {
     background-color: transparent;
+    position: relative;
+    z-index: 1;
   }
 
   .dropdown-menu details[open] ul {
@@ -326,6 +329,8 @@
     margin-top: 0.5rem;
     border-radius: 0.5rem;
     padding: 0.5rem;
+    position: relative;
+    z-index: 1;
   }
 
   .dropdown-menu details[open] summary:hover,
